<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/launcher"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintBottom_toBottomOf="@+id/top_container"
        app:layout_constraintEnd_toEndOf="@+id/container_end"
        app:layout_constraintStart_toStartOf="@+id/container_start"
        app:srcCompat="@mipmap/ic_launcher" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/talentwood"
        android:layout_width="@dimen/_130sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_25sdp"
        app:layout_constraintBottom_toTopOf="@+id/scrollview"
        app:layout_constraintEnd_toEndOf="@+id/container_end"
        app:layout_constraintStart_toStartOf="@+id/container_start"
        app:layout_constraintTop_toBottomOf="@+id/launcher"
        app:srcCompat="@drawable/signup" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/container_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/container_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_container_end"
        app:layout_constraintEnd_toEndOf="@+id/container_end"
        app:layout_constraintStart_toStartOf="@+id/container_start"
        app:layout_constraintTop_toBottomOf="@id/talentwood">

        <LinearLayout
            android:id="@+id/view_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/register_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/enter_name"
                    android:textColor="@color/white" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/circular_edit_text"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="John Doe"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:paddingStart="@dimen/_15sdp"
                    android:paddingEnd="@dimen/_5sdp"
                    android:textColor="@color/text_color"
                    android:textColorHint="@color/text_color"
                    android:textSize="@dimen/_10ssp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/enter_email"
                    android:textColor="@color/white" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/circular_edit_text"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="Eg . name@gmail.com"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:paddingStart="@dimen/_15sdp"
                    android:paddingEnd="@dimen/_5sdp"
                    android:textColor="@color/text_color"
                    android:textColorHint="@color/text_color"
                    android:textSize="@dimen/_10ssp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/enter_mobile"
                    android:textColor="@color/white" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/circular_edit_text"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="+91 98765 43210"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:paddingStart="@dimen/_15sdp"
                    android:paddingEnd="@dimen/_5sdp"
                    android:textColor="@color/text_color"
                    android:textColorHint="@color/text_color"
                    android:textSize="@dimen/_10ssp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_dob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/enter_dob"
                    android:textColor="@color/white" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_dob"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/circular_edit_text"
                    android:cursorVisible="false"
                    android:drawableEnd="@drawable/ic_calendar"
                    android:editable="false"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="dd/mm/yyyy"
                    android:paddingStart="@dimen/_15sdp"
                    android:paddingEnd="@dimen/_15sdp"
                    android:textColor="@color/text_color"
                    android:textColorHint="@color/text_color"
                    android:textSize="@dimen/_10ssp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/select_gender"
                    android:textColor="@color/white" />

                <com.talentwood.powerspinner.PowerSpinnerView
                    android:id="@+id/et_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/circular_edit_text"
                    android:foreground="?attr/selectableItemBackground"
                    android:hint="Select"
                    android:paddingStart="@dimen/_15sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:paddingTop="@dimen/_6sdp"
                    android:paddingBottom="@dimen/_6sdp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="@dimen/_10ssp"
                    app:spinner_arrow_gravity="end"
                    app:spinner_divider_show="false"
                    app:spinner_item_array="@array/genders"
                    app:spinner_item_height="40dp"
                    app:spinner_popup_animation="normal"
                    app:spinner_popup_background="@drawable/spinner_background"
                    app:spinner_popup_elevation="10dp"
                    app:spinner_selected_item_background="@drawable/selected_item_background" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/register_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_role"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/select_role"
                    android:textColor="@color/white" />

                <com.talentwood.powerspinner.PowerSpinnerView
                    android:id="@+id/et_role"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/circular_edit_text"
                    android:foreground="?attr/selectableItemBackground"
                    android:hint="Select"
                    android:paddingStart="@dimen/_15sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:paddingTop="@dimen/_6sdp"
                    android:paddingBottom="@dimen/_6sdp"
                    android:textColor="@color/text_color"
                    android:textColorHint="@color/text_color"
                    android:textSize="@dimen/_10ssp"
                    app:spinner_arrow_gravity="end"
                    app:spinner_divider_show="false"
                    app:spinner_item_array="@array/genders"
                    app:spinner_item_height="40dp"
                    app:spinner_popup_animation="normal"
                    app:spinner_popup_background="@drawable/spinner_background"
                    app:spinner_popup_elevation="10dp"
                    app:spinner_selected_item_background="@drawable/selected_item_background" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_district"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/select_district"
                    android:textColor="@color/white" />

                <com.talentwood.powerspinner.PowerSpinnerView
                    android:id="@+id/et_district"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:paddingStart="@dimen/_15sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:paddingTop="@dimen/_6sdp"
                    android:paddingBottom="@dimen/_6sdp"

                    android:background="@drawable/circular_edit_text"
                    android:foreground="?attr/selectableItemBackground"
                    android:hint="@string/select_district"
                    android:textColor="@color/text_color"
                    android:textColorHint="@color/text_color"
                    android:textSize="@dimen/_10ssp"
                    app:spinner_arrow_gravity="end"
                    app:spinner_divider_show="false"
                    app:spinner_item_array="@array/genders"
                    app:spinner_item_height="40dp"
                    app:spinner_popup_animation="normal"
                    app:spinner_popup_background="@drawable/spinner_background"
                    app:spinner_popup_elevation="10dp"
                    app:spinner_selected_item_background="@drawable/selected_item_background" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_locality"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/enter_locality"
                    android:textColor="@color/white" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_locality"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/circular_edit_text"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="Eg Chennai"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:paddingStart="@dimen/_15sdp"
                    android:paddingEnd="@dimen/_5sdp"
                    android:textColor="@color/text_color"
                    android:textColorHint="@color/text_color"
                    android:textSize="@dimen/_10ssp" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_next"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:backgroundTint="@color/yellow"
        android:fontFamily="@font/nunito_regular"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_10sdp"
        app:cornerRadius="@dimen/_5sdp"
        app:icon="@drawable/right_arrow_white"
        app:iconGravity="textEnd"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/no_account"
        app:layout_constraintEnd_toEndOf="@+id/container_end"
        app:layout_constraintTop_toTopOf="@+id/bottom_container_end"
        app:shapeAppearanceOverlay="@style/MyShapeAppearance"
        app:strokeColor="@color/border"
        app:strokeWidth="@dimen/_1sdp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_previous"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_35sdp"
        android:backgroundTint="@color/yellow"
        android:fontFamily="@font/nunito_regular"
        android:text="@string/previous"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_10sdp"
        android:visibility="gone"
        app:cornerRadius="@dimen/_5sdp"
        app:icon="@drawable/left_arrow_white"
        app:iconGravity="textStart"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/no_account"
        app:layout_constraintStart_toStartOf="@+id/container_start"
        app:layout_constraintTop_toTopOf="@+id/bottom_container_end"
        app:shapeAppearanceOverlay="@style/MyShapeAppearance"
        app:strokeColor="@color/yellow"
        app:strokeWidth="@dimen/_1sdp" />

    <TextView
        android:id="@+id/no_account"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:fontFamily="@font/nunito_regular"
        android:text="@string/have_account"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/register"
        app:layout_constraintHorizontal_weight="6"
        app:layout_constraintStart_toStartOf="@+id/container_start" />

    <TextView
        android:id="@+id/register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_5sdp"
        android:fontFamily="@font/nunito_regular"
        android:text="@string/login"
        android:textColor="@color/yellow"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintBottom_toBottomOf="@+id/no_account"
        app:layout_constraintEnd_toEndOf="@id/container_end"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintHorizontal_weight="4"
        app:layout_constraintStart_toEndOf="@+id/no_account"
        app:layout_constraintTop_toTopOf="@+id/no_account" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_container_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

</androidx.constraintlayout.widget.ConstraintLayout>