<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/launcher"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintBottom_toBottomOf="@+id/top_container"
        app:layout_constraintEnd_toEndOf="@+id/container_end"
        app:layout_constraintStart_toStartOf="@+id/container_start"
        app:srcCompat="@mipmap/ic_launcher" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/container_middle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/container_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/container_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_container_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_welcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintBottom_toTopOf="@+id/tv_desc"
        app:layout_constraintEnd_toEndOf="@+id/container_end"
        app:layout_constraintStart_toStartOf="@+id/container_start"
        app:layout_constraintTop_toBottomOf="@+id/top_container" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_5sdp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/welcome_desc"
        android:textColor="@color/white"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintBottom_toTopOf="@+id/tv_email"
        app:layout_constraintEnd_toEndOf="@+id/container_end"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/container_start"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/enter_email_mobile"
        android:textColor="@color/txt"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintBottom_toTopOf="@+id/et_email"
        app:layout_constraintEnd_toEndOf="@+id/container_end"
        app:layout_constraintStart_toStartOf="@+id/container_start" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_email"
        android:layout_width="0dp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@drawable/circular_edit_text"
        android:fontFamily="@font/poppins_regular"
        android:hint="Eg . name@gmail.com"
        android:imeOptions="actionDone"
        android:inputType="textEmailAddress"
        android:paddingStart="@dimen/_15sdp"
        android:paddingEnd="@dimen/_5sdp"
        android:textColor="@color/text_color"
        android:textColorHint="@color/text_color"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintBottom_toBottomOf="@+id/container"
        app:layout_constraintEnd_toEndOf="@id/container_end"
        app:layout_constraintStart_toStartOf="@+id/container_start"
        app:layout_constraintTop_toTopOf="@+id/container" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/send_otp"
        android:layout_width="0dp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:backgroundTint="@color/btncolor"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/send_otp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_10sdp"
        app:cornerRadius="@dimen/_5sdp"
        app:layout_constraintEnd_toEndOf="@+id/container_end"
        app:layout_constraintStart_toStartOf="@+id/container_start"
        app:layout_constraintTop_toBottomOf="@+id/container_middle"
        app:shapeAppearanceOverlay="@style/MyShapeAppearance"
        app:strokeColor="@color/btncolor"
        app:strokeWidth="@dimen/_1sdp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/back"
        android:layout_width="0dp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:backgroundTint="@color/dull_bg"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/back"
        android:textAllCaps="false"
        android:textColor="@color/yellow"
        android:textSize="@dimen/_10sdp"
        app:cornerRadius="@dimen/_5sdp"
        app:layout_constraintEnd_toEndOf="@+id/container_end"
        app:layout_constraintStart_toStartOf="@+id/container_start"
        app:layout_constraintTop_toBottomOf="@+id/send_otp"
        app:shapeAppearanceOverlay="@style/MyShapeAppearance"
        app:strokeColor="@color/btncolor"
        app:strokeWidth="@dimen/_1sdp" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="et_email,tv_email,tv_welcome,tv_desc" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_reset_pass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:fontFamily="@font/poppins_regular"
        android:src="@drawable/ic_welcome"
        android:text="@string/reset_pass_"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/tv_email"
        app:layout_constraintEnd_toEndOf="@+id/container_end"
        app:layout_constraintStart_toStartOf="@+id/container_start"
        app:layout_constraintTop_toBottomOf="@+id/top_container" />

    <com.otpview.OTPTextView
        android:id="@+id/otp_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        app:box_margin="6dp"
        app:height="45dp"
        app:hide_otp="false"
        app:hide_otp_drawable="@drawable/bg_otp_box_hide"
        app:layout_constraintBottom_toTopOf="@+id/container_middle"
        app:layout_constraintEnd_toEndOf="@+id/container_end"
        app:layout_constraintStart_toStartOf="@+id/container_start"
        app:layout_constraintTop_toBottomOf="@+id/tv_reset_pass"
        app:length="4"
        app:otp=""
        app:otp_box_background="@drawable/bg_otp_box"
        app:otp_box_background_active="@drawable/bg_otp_box"
        app:otp_box_background_error="@drawable/bg_otp_box"
        app:otp_box_background_inactive="@drawable/bg_otp_box"
        app:otp_box_background_success="@drawable/bg_otp_box"
        app:otp_text_size="20sp"
        app:width="40dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_timer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:fontFamily="@font/poppins_regular"
        android:text="01.59"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintEnd_toEndOf="@+id/container_end"
        app:layout_constraintStart_toStartOf="@+id/container_start"
        app:layout_constraintTop_toBottomOf="@+id/back" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="tv_timer,otp_view,tv_reset_pass" />

</androidx.constraintlayout.widget.ConstraintLayout>